Styling landing page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
         </header>
 
         <main>
+		<section>
+		<div class="landing-page">
+            <span class="rectangle"></span>
+            <div class="intro">
+                <h2 class="headline">Lorem ipsum dolor sit amet!</h2>
+                <div class="description-button">
+                    <p class="description">Consectetur adipiscing elit. Morbi viverra ullamcorper lectus ut
+                        venenatis.Nam elementum augue id blandit. </p>
+                    <a href="#" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a>
+                </div>
+            </div>
+
+            <img src="software-engineer.png" class="illustration" alt="The Girl is writing something on her yellow laptop.There is a huge laptop in the background
+                    illustration">
+
+        </div>
+		</section>
             <section>
                 <div class = "categories-container">
                     <p class = "categories-introduction">
