Implementation of navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>The Gallery of Remarkable People</title>
 
+    <link rel = "icon" href = "atlas.svg">
     <link rel = "stylesheet" href = "main.css">
     <link rel = "preconnect" href = "https://fonts.gstatic.com">
     <link href = "https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel = "stylesheet">
@@ -24,14 +25,14 @@
                     <i class = "fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
                 </div>
                 <nav>
-                    <div class = "navigation">
-                        <ol class = "navigation-list">
-                            <li class = "navigation-item"></li>
-                            <li class = "navigation-item"></li>
-                            <li class = "navigation-item"></li>
-                        </ol>
-                    </div>
-                </nav>
+                        <div class = "navigation"> 
+                            <ol class = "navigation-list">
+                                <li class = "navigation-item" tabindex = "0">About Us</li> 
+                                <li class = "navigation-item" tabindex = "0">Offer</li>
+                                <li class = "navigation-item" tabindex = "0">Contact</li>
+                            </ol>
+                        </div>
+                    </nav>
             </div>
         </header>
 
@@ -55,17 +56,15 @@
 		</section>
             <section>
                 <div class = "categories-container">
-                    <p class = "categories-introduction">
-
-                    </p>
-                    <ol class = "category-list">
-                        <li class = "category"></li>
-                        <li class = "category"></li>
-                        <li class = "category"></li>
-                        <li class = "category"></li>
-                        <li class = "category"></li>
-                    </ol>
-                </div>
+                        <p class = "categories-introduction"><i class = "fas fa-book-reader"></i>Browse your favorite category!<i class = "fas fa-lightbulb"></i></p>
+                        <ol class = "category-list">
+                            <li class = "category">Placeholder #1</li>
+                            <li class = "category">PLaceholder #2</li>
+                            <li class = "category">Placeholder #3</li>
+                            <li class = "category">Placeholder #4</li>
+                            <li class = "category">Placeholder #5</li>
+                        </ol>
+                    </div>
             </section>
             
             <section>
