--- a/index.html
+++ b/index.html
@@ -1,87 +1,89 @@
 <!DOCTYPE HTML>
-<html lang = "en-US">
-    <head>
-        <meta charset = "utf-8">
-        <meta http-equiv = "X-UA-Compatible" content = "IE,Edge=1">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <title>The Gallery of Remarkable People</title>
-        <link rel = "icon" href = "atlas.svg">
-        <link rel = "stylesheet" href = "main.css">
-        <link rel = "preconnect" href = "https://fonts.gstatic.com">
-        <link href = "https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel = "stylesheet">
-        <!--[if lt IE 9]>
+<html lang="en-US">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>The Gallery of Remarkable People</title>
+	<link rel="icon" href="atlas.svg">
+	<link rel="stylesheet" href="main.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+	<!--[if lt IE 9]>
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
         <![endif]-->
-    </head>
-    <body>
-        <div class = "container">
-            <header>
-                <div class = "header">
-                    <div class = "logo">
-                        <i class = "fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
-                    </div>
-                    <nav>
-                        <div class = "navigation">
-                            <ol class = "navigation-list">
-                                <li class = "navigation-item" tabindex = "0">About Us</li>
-                                <li class = "navigation-item" tabindex = "0">Offer</li>
-                                <li class = "navigation-item" tabindex = "0">Contact</li>
-                            </ol>
-                        </div>
-                    </nav>
-                </div>
-            </header>
-            <main>
-                <section>
-                    <div class="landing-page">
-                        <span class="rectangle"></span>
-                        <div class="intro">
-                            <h2 class="headline">Lorem ipsum dolor sit amet!</h2>
-                            <div class="description-button">
-                                <p class="description">Consectetur adipiscing elit. Morbi viverra ullamcorper lectus ut
-                                    venenatis.Nam elementum augue id blandit. 
-                                </p>
-                                <a href="#" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a>
-                            </div>
-                        </div>
-                        <img src="software-engineer.png" class="illustration" alt="The Girl is writing something on her yellow laptop.There is a huge laptop in the background
-                            illustration">
-                    </div>
-                </section>
-                <section>
-                    <div class = "categories-container">
-                        <p class = "categories-introduction"><i class = "fas fa-book-reader"></i>Browse your favorite category!<i class = "fas fa-lightbulb"></i></p>
-                        <ol class = "category-list">
-                            <li class = "category">Placeholder #1</li>
-                            <li class = "category">PLaceholder #2</li>
-                            <li class = "category">Placeholder #3</li>
-                            <li class = "category">Placeholder #4</li>
-                            <li class = "category">Placeholder #5</li>
-                        </ol>
-                    </div>
-                </section>
-                <section>
-                    <div class = "form-container">
-                        <p class = "form-introduction">
-                        </p>
-                        <div class = "form">
-                            <form method = "" action = "">
-                            </form>
-                        </div>
-                        <div class = "form-image-container"></div>
-                        <button class = "form-button"></button>
-                    </div>
-                </section>
-            </main>
-            <footer>
-                <div class = "footer">
-                    <p class = "footer-text">
-                    </p>
-                    <p class = "footer-text">
-                    </p>
-                </div>
-            </footer>
-        </div>
-        <script src = "https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin = "anonymous"></script>
-    </body>
+</head>
+
+<body>
+	<div class="container">
+		<header>
+			<div class="header">
+				<div class="logo"> <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People </div>
+				<nav>
+					<div class="navigation">
+						<ol class="navigation-list">
+							<li class="navigation-item" tabindex="0">About Us</li>
+							<li class="navigation-item" tabindex="0">Offer</li>
+							<li class="navigation-item" tabindex="0">Contact</li>
+						</ol>
+					</div>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<section>
+				<div class="landing-page"> <span class="rectangle"></span>
+					<div class="intro">
+						<h2 class="headline">Lorem ipsum dolor sit amet!</h2>
+						<div class="description-button">
+							<p class="description">Consectetur adipiscing elit. Morbi viverra ullamcorper lectus ut venenatis.Nam elementum augue id blandit. </p> <a href="#" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a> </div>
+					</div> <img src="software-engineer.png" class="illustration" alt="The Girl is writing something on her yellow laptop.There is a huge laptop in the background
+                            illustration"> </div>
+			</section>
+			<section>
+				<div class="categories-container">
+					<p class="categories-introduction"><i class="fas fa-book-reader"></i>Browse your favorite category!<i class="fas fa-lightbulb"></i></p>
+					<ol class="category-list">
+						<li class="category">Placeholder #1</li>
+						<li class="category">PLaceholder #2</li>
+						<li class="category">Placeholder #3</li>
+						<li class="category">Placeholder #4</li>
+						<li class="category">Placeholder #5</li>
+					</ol>
+				</div>
+			</section>
+			<section>
+				<div class="form-container">
+					<p class="form-introduction">Get in touch with us here...<i class="far fa-paper-plane"></i></p>
+					<div class="form">
+						<div class="form-ilustration">
+							<form method="" action="">
+								<div class="label-input">
+									<label for="name" class="form-labels">Your name:</label>
+									<input type="text" id="name" class="form-inputs"> </div>
+								<div class="label-input">
+									<label for="phone-number" class="form-labels">Your phone:</label>
+									<input type="tel" id="phone-number" class="form-inputs"> </div>
+								<div class="label-textarea">
+									<label for="message" class="form-labels">What do you want to tell us?</label>
+									<textarea name="" id=" message" cols="30" rows="7" class="form-textarea"></textarea>
+								</div>
+							</form> <img src="ask-customer-feedback.png" class="illustration-question" alt="In the background illustration there is a huge question mark. In the foreground illustration there is two men"> </div>
+						<button class="form-button">Submit <span class="message"><i
+                                    class="far fa-envelope"></i></span></button>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div class="footer">
+				<p class="footer-text"> </p>
+				<p class="footer-text"> </p>
+			</div>
+		</footer>
+	</div>
+	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
