--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
@@ -39,10 +38,11 @@
 					<div class="intro">
 						<h2 class="headline" tabindex="0">Profiles of famous computer<br>scientists in one place!</h2>
 						<div class="description-button">
-							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p> <a href="#" tabindex="0" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a> 
+							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p> <a href="#categories" tabindex="0" title="Scroll down for more!" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a> 
 						</div>
 					</div> 
-					<img src="img/software-engineer.png" class="illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration"> </div>
+					<img src="img/software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration."> 
+				</div>
 			</section>
 			<svg xmlns="http://www.w3.org/2000/svg" height="575" id="svg-element">
 				<g transform="translate(0, 520)">
@@ -54,36 +54,36 @@
 			</svg>
 			<section style = "height: 0;">
 				<div class="categories-container" id = "categories-container">
-					<p class="categories-introduction" tabindex="0">Browse your favorite category!&emsp;<i class="far fa-smile-beam"></i></i>
-					</p>
+					<p class="categories-introduction" id="categories" tabindex="0">Browse your favorite category!&emsp;<i class="far fa-smile-beam"></i></i></p>
 					<ol class="category-list">
-						<li class="category" tabindex="0">Notable Programmers<br><br><i class="fas category-icon fa-code-branch"></i></li>
-						<li class="category" tabindex="0">Social Media Creators<br><br><i class="fas category-icon fa-hashtag"></i></li>
-						<li class="category" tabindex="0">Notable Computer Designers<br><br><i class="fas category-icon fa-paint-brush"></i></li>
-						<li class="category" tabindex="0">Famous Cryptographers<br><br><i class="far category-icon fa-keyboard"></i></li>
+						<li class="category" id="notable-programmers" tabindex="0">Notable Programmers<br><br><i class="fas category-icon fa-code-branch"></i></li>
+						<li class="category" id="social-media-creators" tabindex="0">Social Media Creators<br><br><i class="fas category-icon fa-hashtag"></i></li>
+						<li class="category" id="notable-designers" tabindex="0">Notable Computer Designers<br><br><i class="fas category-icon fa-paint-brush"></i></li>
+						<li class="category" id="famous-cryptographers" tabindex="0">Famous Cryptographers<br><br><i class="far category-icon fa-keyboard"></i></li>
 					</ol>
 				</div>
 			</section>
 			<section>
 				<div class="form-container" id = "form-container">
-					<p class="form-introduction">Get in touch with us here...<i class="far fa-paper-plane"></i></p>
+					<p class="form-introduction" tabindex="0">Get in touch with us here...<i class="far fa-paper-plane"></i></p>
 					<div class="form">
 						<div class="form-ilustration">
 							<form method="" action="">
-								<div class="label-input">
+								<div class="label-input" title="Enter your name here.">
 									<label for="name" class="form-labels">Your name:</label>
 									<input type="text" id="name" class="form-inputs"> 
 								</div>
-								<div class="label-input">
+								<div class="label-input" title="Enter your name here.">
 									<label for="phone-number" class="form-labels">Your phone:</label>
 									<input type="tel" id="phone-number" class="form-inputs"> 
 								</div>
-								<div class="label-textarea">
+								<div class="label-textarea" title="Enter your message here.">
 									<label for="message" class="form-labels">What do you want to tell us?</label>
 									<textarea name="" id=" message" cols="30" rows="7" class="form-textarea"></textarea>
 								</div>
 							</form> 
-							<img src="img/ask-customer-feedback.png" class="illustration-question" alt="Here is a huge question mark. In the foreground there are two men"> </div>
+							<img src="img/ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men."> 
+						</div>
 						<button class="form-button">
 							Submit! <span class="message"><i class="far fa-envelope"></i></span>
 						</button>
@@ -94,10 +94,11 @@
 		<footer>
 			<div class="footer">
 				<p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
-				<p class="social-media-icons"> <i class="fab fa-facebook"id = "facebook" tabindex="0"></i> &emsp; <i class="fab fa-youtube" id = "youtube" tabindex="0"></i> &emsp; <i class="fab fa-snapchat-ghost" id="snapchat" tabindex="0"></i> &emsp; <i class="fab fa-linkedin-in" id="linkedin" tabindex="0"></i> </p>
+				<p class="social-media-icons"> <i class="fab fa-facebook"id = "facebook" title="Facebook" tabindex="0"></i> &emsp; <i class="fab fa-youtube" id = "youtube" title="YouTube" tabindex="0"></i> &emsp; <i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i> &emsp; <i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i> </p>
 			</div>
 		</footer>
 	</div>
+
 	<script src="scripts/svg-positioning.js" async></script>
 	<script src="scripts/links.js" async></script>
 	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" async></script>
