Correcting display of images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2 class="headline" tabindex="0">Profiles of famous computer<br>scientists in one place!</h2>
 						<div class="description-button">
 							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p> <a href="#categories" tabindex="0" title="Scroll down for more!" class="btn-hand-down"><i class="far fa-hand-point-down"></i></a> </div>
-					</div> <img src="software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration."> </div>
+					</div> <img src="img/software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration."> </div>
 			</section>
 			<svg xmlns="http://www.w3.org/2000/svg" height="575" id="svg-element" width="100%">
 				<g transform="translate(0, 520)">
@@ -85,7 +85,7 @@
 									<label for="message" class="form-labels">What do you want to tell us?</label>
 									<textarea name="" id=" message" cols="30" rows="7" class="form-textarea"></textarea>
 								</div>
-							</form> <img src="ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men."> </div>
+							</form> <img src="img/ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men."> </div>
 						<button class="form-button"> Submit! <span class="message"><i class="far fa-envelope"></i></span> </button>
 					</div>
 				</div>
