--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>The Gallery of Remarkable People</title>
-	
+
 	<link rel="icon" href="img/atlas.png">
+	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
-	
+
 	<!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
     <![endif]-->
 </head>
+
 <body>
 	<div class="container">
 		<header>
 			<div class="header" id="header">
-				<div class="logo" id="logo" tabindex="0"> 
+				<div class="logo" id="logo" tabindex="0">
 					<a href="index.html" class="link"><i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People </a>
 				</div>
 				<nav>
@@ -30,10 +33,10 @@
 							<li class="navigation-item" id="offer" tabindex="0"><a href="#" class="link">Offer</a></li>
 							<li class="navigation-item" id="contact" tabindex="0"><a href="#" class="link">Contact</a></li>
 						</ol>
-						<button class="hamburger"> 
-							<span class="line"></span> 
-							<span class="line"></span> 
-							<span class="line"></span> 
+						<button class="hamburger">
+							<span class="line"></span>
+							<span class="line"></span>
+							<span class="line"></span>
 						</button>
 					</div>
 				</nav>
@@ -41,16 +44,16 @@
 		</header>
 		<main>
 			<section>
-				<div class="landing-page"> 
+				<div class="landing-page">
 					<span class="rectangle"></span>
 					<div class="intro">
 						<h2 class="headline" tabindex="0">Profiles of famous computer<br>scientists in one place!</h2>
 						<div class="description-button">
-							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p> 
-							<a href="#" tabindex="0" title="Scroll down for more!" id="btn-hand-down" class="link"><i class="far fa-hand-point-down"></i></a> 
+							<p class="description" tabindex="0">Have you ever really gone through biographies of famous people from the IT industry? Now you can do it quickly and enjoyably. Scroll down for more!</p>
+							<a href="#" tabindex="0" title="Scroll down for more!" id="btn-hand-down" class="link"><i class="far fa-hand-point-down"></i></a>
 						</div>
-					</div> 
-					<img src="img/software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration."> 
+					</div>
+					<img src="img/software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
 				</div>
 			</section>
 			<svg xmlns="http://www.w3.org/2000/svg" height="575" id="svg-element" width="100%">
@@ -80,21 +83,21 @@
 							<form method="" action="">
 								<div class="label-input" title="Enter your name here.">
 									<label for="name" class="form-labels">Your name:</label>
-									<input type="text" id="name" class="form-inputs"> 
+									<input type="text" id="name" class="form-inputs">
 								</div>
 								<div class="label-input" title="Enter your name here.">
 									<label for="phone-number" class="form-labels">Your phone:</label>
-									<input type="tel" id="phone-number" class="form-inputs"> 
+									<input type="tel" id="phone-number" class="form-inputs">
 								</div>
 								<div class="label-textarea" title="Enter your message here.">
 									<label for="message" class="form-labels">What do you want to tell us?</label>
 									<textarea name="" id=" message" cols="25" rows="7" class="form-textarea"></textarea>
 								</div>
-							</form> 
-							<img src="img/ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men."> 
+							</form>
+							<img src="img/ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men.">
 						</div>
-						<button class="form-button" type="submit"> 
-							Submit! <span class="message"><i class="far fa-envelope"></i></span> 
+						<button class="form-button" type="submit">
+							Submit! <span class="message"><i class="far fa-envelope"></i></span>
 						</button>
 					</div>
 				</div>
@@ -103,18 +106,19 @@
 		<footer>
 			<div class="footer">
 				<p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
-				<p class="social-media-icons"> 
-					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp; 
-					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp; 
-					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp; 
-					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a> 
+				<p class="social-media-icons">
+					<a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook" id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
+					<a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube" id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
+					<a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost" id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
+					<a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in" id="linkedin" title="Linkedin" tabindex="0"></i></a>
 				</p>
 			</div>
 		</footer>
 	</div>
 
 	<script src="links-with-offset.js" defer></script>
-	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" async></script>
+	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
 	<script src="navbar-mobile.js" defer></script>
 </body>
+
 </html>
