Change of the tags' container semantics

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -53,11 +53,11 @@
                 <div class="filler"></div>
             </section>
             <article>
-                <ol class="tag-list">
-                    <li class="tag"></li>
-                    <li class="tag"></li>
-                    <li class="tag"></li>
-                </ol>
+                <div class="tags-container">
+                    <div class="tag"></div>
+                    <div class="tag"></div>
+                    <div class="tag"></div>
+                </div>
                 <div class="paragraph">
                     <img src="" alt="" class="paragraph-image">
                     <p class="paragraph-text"></p>
