Correction of the website structure

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -22,31 +22,39 @@
 <body>
     <div class="container">
         <header>
-            <div class="header" id="header">
-                <div class="logo" id="logo" tabindex="0">
-                    <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
-                </div>
-                <nav>
-                    <div class="navigation">
-                        <span class="navigation-item" id="go-back" tabindex="0"><a href="index.html" class="link">Go Back </a></span><i class="fas fa-arrow-circle-left"></i>
-                        <button class="hamburger">
-                            <span class="line"></span>
-                            <span class="line"></span>
-                            <span class="line"></span>
-                        </button>
+            <div class="header-container">
+                <div class="header" id="header">
+                    <div class="logo" id="logo" tabindex="0">
+                        <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
                     </div>
-                </nav>
+                    <nav>
+                        <div class="navigation">
+                            <span class="navigation-item" id="go-back" tabindex="0"><a href="index.html" class="link">Go Back </a></span>
+                            <button class="hamburger">
+                                <span class="line"></span>
+                                <span class="line"></span>
+                                <span class="line"></span>
+                            </button>
+                        </div>
+                    </nav>
+                </div>
             </div>
         </header>
         <main>
             <article>
-                <div class="introduction">
+                <div class="introduction-container">
                     <div class="introduction-text">
-                        <div class="introduction-headline"></div>
-                        <div class="introduction-paragraph"></div>
+                        <h1 class="introduction-headline">Headline goes here!</h1>
+                        <p class="introduction-paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus hendrerit commodo.
+                            Vestibulum vitae felis id urna malesuada pretium non nec nulla. Cras justo sem, tempor ac
+                            malesuada eget, scelerisque ut magna. Nunc commodo nulla ut luctus porttitor.
+                        </p>
                         <button class="learn-more-btn">Learn more!</button>
                     </div>
-                    <img src="" alt="" class="introduction-image">
+                    <div class="image-container">
+                        <img src="img/bill-gates.jpg" alt="Bill Gates in a suit." class="introduction-image">
+                    </div>
                 </div>
             </article>
             <section>
