Writing script and uploading images

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<title>The Gallery of Remarkable People</title>
 
 	<link rel="icon" href="img/atlas.png">
-	<link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
@@ -116,9 +116,9 @@
 		</footer>
 	</div>
 
-	<script src="links-with-offset.js" defer></script>
+	<script src="js/links-with-offset.js" defer></script>
 	<script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
-	<script src="navbar-mobile.js" defer></script>
+	<script src="js/navbar-mobile.js" defer></script>
 </body>
 
 </html>
