Writing paragraph and newsletter

--- a/notable-programmers.html
+++ b/notable-programmers.html
@@ -66,22 +66,34 @@
                     Excitation."
                 </div>
             </section>
-            <article>
-                <div class="tags-container">
-                    <div class="tag"></div>
-                    <div class="tag"></div>
-                    <div class="tag"></div>
-                </div>
-                <div class="paragraph">
-                    <img src="" alt="" class="paragraph-image">
-                    <p class="paragraph-text"></p>
+           <article>
+                <div class="paragraph-container">
+                    <div class="tags-container">
+                        <div class="tag">History</div>
+                        <div class="tag">Feat</div>
+                        <div class="tag">History</div>
+                    </div>
+                    <div class="paragraph">
+                        <img src="img/bill-gates.jpg" alt="Bill Gates in a suit." class="introduction-image">
+                        <p class="paragraph-text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s when an unknown printer took a
+                            galley of type and scrambled. Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been.
+                        </p>
+                    </div>
                 </div>
             </article>
             <section>
                 <div class="newsletter">
-                    <span class="newsletter-text"></span>
-                    <input type="email" class="email" required>
-                    <button class="newsletter-btn">Sign Up!</button>
+                    <span class="newsletter-text">Subscribe to our newsletter!</span>
+                    <div class="newsletter-email-button">
+                        <div class="newsletter-email">
+                            <input type="email" id="input-email" class="email-form" placeholder=" " required>
+                            <label for="input-email" class="label-email">E-mail</label>
+                        </div>
+                        <button class="newsletter-btn" type="submit">Sign Up!</button>
+                    </div>
                 </div>
             </section>
         </main>
