Addition of final touches

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 							<a href="#" tabindex="0" title="Scroll down for more!" id="btn-hand-down" class="link"><i class="far fa-hand-point-down"></i></a>
 						</div>
 					</div>
-					<img src="img/software-engineer.png" class="illustration" title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
+					<div title="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration." >
+						<img src="img/software-engineer.png" class="illustration" alt="The girl is using her yellow portable computer. There is another huge laptop in the background's illustration.">
+					</div>
 				</div>
 			</section>
 			<svg xmlns="http://www.w3.org/2000/svg" height="575" id="svg-element" width="100%">
@@ -94,7 +96,9 @@
 									<textarea name="" id=" message" cols="25" rows="7" class="form-textarea"></textarea>
 								</div>
 							</form>
-							<img src="img/ask-customer-feedback.png" class="illustration-question" title="Here is a huge question mark. In the foreground there are two men" alt="Here is a huge question mark. In the foreground there are two men.">
+							<div title="Here is a huge question mark. In the foreground there are two men.">
+								<img src="img/ask-customer-feedback.png" class="illustration-question" alt="Here is a huge question mark. In the foreground there are two men.">
+							</div>
 						</div>
 						<button class="form-button" type="submit">
 							Submit! <span class="message"><i class="far fa-envelope"></i></span>
